--- a/main.tex
+++ b/main.tex
@@ -42,11 +42,12 @@ In all the paper we use the next notations :
 \item $A.s+\nu = b$ is an instance of the LPN problem.
 \item $A\in \mathcal{M}_{m\times n}(GF(2)), \nu\in \mathcal{M}_{m\times
 1}(GF(2))$
+\item TODO: notations
 \end{itemize}
 
 \section{Description of BKW algorithm}
 The main issue with the LPN is to reduce the dimension of the problem without
-increase the noise too much. \cite{BKW} proposed the first sub-exponential
+increasing the noise too much. \cite{BKW} proposed the first sub-exponential
 algorithm with a clever adaptation of gaussian pivot. Let us remind the first
 step of the algorithm in a general case. Next, we are going to analyze precisely
 the complexity.
@@ -77,7 +78,8 @@ is highly correlated to the score: $$score(x)=\sum\limits_{\forall r_i\in
 Row(A)}r_i.x+b(i)$$ The first time, we are in $({-1,1},*)$, the second time we
 are in $(\mathbb{Z}/2\mathbb{Z},\oplus)$.Moreover, in our context of LPN we have
 $s=\argmin\limits_{x \in E} score(x)$. In other words, we want to say $s = \argmax\limits_{x\in
-E} \hat{f}(x)$.
+E} \hat{f}(x)$.%TODO ARgmin/Argmax selon dans quel espace on est : choisir
+
 
 So, if we know the greater coefficient of the Fourier tranforms of f, we solve
 the LPN. Actually, there is a deeper reason for this correlation that you can find in any
@@ -90,11 +92,16 @@ lesson on the representation of finite abelian groups.
 \section{Description of the Algorithm}
 
 decrire le nouvel algo en indiquant les differentes phase grace a un dessin
+\begin{itemize}
+\item Phase de réduction
+\item Grignotage de bits
+\item FWHs sur ce qui reste
+\end{itemize}
+
 
 \subsection{Complexity}
-
-Complexity en fonction de la sparse WH
-
+%Analysis
+TODO
 \section{Sparse Walsh-Hadamard}
 Let $f:(\mathbb{Z}/2.\mathbb{Z})^n \rightarrow \mathbb{Z}/2.\mathbb{Z}$.
 
@@ -102,7 +109,7 @@ Let $f:(\mathbb{Z}/2.\mathbb{Z})^n \rightarrow \mathbb{Z}/2.\mathbb{Z}$.
 We know how to compute a fast Walsh-Hadamard transform.
 However, to solve the sparse-LPN, we don't need the all spectrum of f. 
 A natural question is to wonder if we can adapt the algorithm to compute only
-some coefficients of $\hat{f}$. 
+some interesting coefficients of $\hat{f}$. 
 
 The next algorithm generates the list of $(s,score(s))$ for all $s$ potential secret of
 hamming weight less or equal to p.p is a parameter of the algorithm.
