Small fix (average to worst vs average to hard) and test repo access

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@ In this paper, we study some variants of the BKW (Blum-Kalai-Wasserman) algorith
 The Learning Parities with Noise (LPN) problem is 
 a well-known problem in learning and it is also used 
 in various cryptosystems. 
-Its connection with lattice problem and the average case to hard
+Its connection with lattice problem and the average case to worst
  case reduction for some lattice has been the last years
  a very active research area and many cryptosystems have been proposed. 
 
